--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,10 @@
-h1 {
-  color: blue;
+body {
+  background-color: aquamarine;
+  max-width: 800px;
+  margin: 40px auto;
+  font-family: "Roboto", sans-serif;
+}
+
+.units {
+  font-size: 20px;
 }
