Moved buttons and border radius
Changed .description to italic, changed border radius of card, and moved 'search' and 'use current location' buttons.

--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,18 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+button {
+  padding: 10px;
+}
+
+.card {
+  border-radius: 20px;
+}
 .units {
   font-size: 20px;
+}
+
+.description {
+  font-style: italic;
+  font-weight: bold;
 }
