--- a/src/style.css
+++ b/src/style.css
@@ -9,8 +9,23 @@ button {
   padding: 10px;
 }
 
+.date-time {
+  padding: 0 20px;
+}
+
+.card-body {
+  padding: 10px;
+}
+.city-result {
+  margin-bottom: 0px;
+  padding: 0 20px;
+}
+.temperature {
+  padding: 10px 20px;
+}
 .card {
   border-radius: 20px;
+  padding: 30px;
 }
 .units {
   font-size: 20px;
@@ -19,4 +34,9 @@ button {
 .description {
   font-style: italic;
   font-weight: bold;
+  padding-left: 20px;
+}
+
+.forecast {
+  padding-left: 20px;
 }
