testing background colors

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #53a8b6;
+  background: linear-gradient(180.3deg, #53a8b6 5%, #79c2d0 95%);
   max-width: 800px;
   padding: 40px;
   margin: 60px auto;
