--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,10 @@
 body {
-  background: linear-gradient(180.3deg, #53a8b6 5%, #79c2d0 95%);
+  background: radial-gradient(
+    circle at 10% 20%,
+    rgb(161, 222, 226) 0%,
+    rgb(198, 232, 221) 100.2%
+  );
+
   max-width: 800px;
   padding: 40px;
   margin: 60px auto;
@@ -12,6 +17,10 @@ button {
 
 .card {
   background-color: #79c2d0;
+}
+
+.search-button {
+  margin: 5px;
 }
 
 .date-time {
@@ -36,8 +45,12 @@ button {
   padding: 30px;
 }
 
-.units {
-  font-size: 20px;
+.unit {
+  font-size: 100px;
+  text-decoration: none;
+  position: relative;
+  font-size: 14px;
+  top: -10px;
 }
 
 .description {
