--- a/src/style.css
+++ b/src/style.css
@@ -64,8 +64,16 @@ button {
   padding-left: 20px;
 }
 
+.forecast span {
+  padding: 0px;
+}
+
 .humidity {
   padding-left: 20px;
   text-transform: capitalize;
   font-size: 15px;
+}
+
+.humidity span {
+  padding-left: 5px;
 }
