--- a/src/style.css
+++ b/src/style.css
@@ -36,9 +36,13 @@ button {
   padding: 0 20px;
 }
 
-.temperature {
-  padding: 10px 20px;
+.icon {
+  vertical-align: middle;
 }
+
+/* .temperature {
+  padding: 10px 20px;
+} */
 
 .card {
   border-radius: 20px;
@@ -62,7 +66,6 @@ button {
 
 .forecast {
   padding: 20px;
-  
 }
 
 .forecast span {
