--- a/src/style.css
+++ b/src/style.css
@@ -59,7 +59,12 @@ a {
   position: relative;
   font-size: 14px;
   top: -10px;
+  
 }
+
+.units .active {
+  color: black;}
+  
 
 .description {
   font-style: italic;
