Added function resetUnits
If you changed the units to F then searched a new city, it would show up as the new city temperature in C, but F would still be active (color black), appearing inaccurate.
Fixed this issue.

--- a/src/style.css
+++ b/src/style.css
@@ -61,10 +61,15 @@ a {
   position: relative;
   font-size: 14px;
   top: -10px;
+  color: black;
 }
 
-.units .active {
+.active {
   color: black;
+}
+
+.inactive {
+  color: yellow;
 }
 
 .description {
@@ -110,4 +115,6 @@ a {
 
 .forecast-min {
   color: grey;
+  display: block;
+  margin: 0 auto;
 }
